Adding direction changes and compile fix